//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package interceptor_rpc;

import "goon_types.proto";

service InterceptorRpc {
  rpc Ping(goon_types.RizzPing) returns (goon_types.GoonPong) {}
}